logs/g2gchat.log
Listing '.'...
Listing './bin'...
Compiling './bin/config_parser.py'...
***   File "./bin/config_parser.py", line 24
    print'Cannot find config file...'
                                    ^
SyntaxError: invalid syntax

Compiling './bin/g2gchat.py'...
***   File "./bin/g2gchat.py", line 54
    print "\n\t\t\t\t\t\tWelcome to G2Gchat\n\n"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/g2gchat'...
Compiling './lib/python3.5/site-packages/g2gchat/__init__.py'...
***   File "./lib/python3.5/site-packages/g2gchat/__init__.py", line 54
    print "\n\t\t\t\t\t\tWelcome to G2Gchat\n\n"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/g2gchat/config_parser.py'...
***   File "./lib/python3.5/site-packages/g2gchat/config_parser.py", line 24
    print'Cannot find config file...'
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/g2gchat/g2gchat.py'...
***   File "./lib/python3.5/site-packages/g2gchat/g2gchat.py", line 54
    print "\n\t\t\t\t\t\tWelcome to G2Gchat\n\n"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/g2gchat-0.5.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
